--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@ p {
     <h2>or</h2>
     <h2>Contact With Me on Social Media</h2>
     <div class="social-icons">
-      <a href="#"><img src="instagram.png" alt="Instagram"></a>
-      <a href="#"><img src="twitter.png" alt="Twitter"></a>
-      <a href="#"><img src="facebook.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/aliciaava182"><img src="/assets/ig t.png" alt="Instagram"></a>
+      <a href="www.tiktok.com/@ava.lix"><img src="/assets/tiktok.png" alt="Tiktok"></a>
+      <a href="www.facebook.com/aliciaava182fb"><img src="/assets/facebook.png" alt="Facebook"></a>
     </div>
   </section>
       </div>    
